# ytb-api

./: db.sqlite  pyproject.toml
alembic/: env.py
alembic/versions/: 2025_11_05_1512-97f1119abbda_add_videos_table.py  2025_11_05_1612-832a0fa50133_add_video_processing_fields_for_hls_.py
bruno/: Health Check.bru  README.md  bruno.json
bruno/Auth/: Get Current User.bru  Login.bru  Refresh Token.bru  Register.bru
bruno/Videos/: Create Video.bru  Delete Video.bru  Get All Videos.bru  Get My Videos.bru  Get Presigned Upload URL.bru  Get Video by ID.bru  Mark Upload Complete.bru  Processing Webhook (Simulate go-api).bru  Processing Webhook - Failed (Simulate).bru  Update Video.bru
bruno/environments/: Local.bru
src/: main.py
src/api/auth/: api.py  securities.py  services.py
src/api/studio/: api.py  videos_api.py
src/core/: logger.py  settings.py
src/db/: __init__.py
src/middlewares/: middleware_info_req.py
src/models/: users.py  videos.py
src/schemas/: users.py  videos.py
src/services/: authentication.py  s3_service.py  user_ser.py  user_signal_ser.py  utils.py  video_processing_service.py  video_service.py
